real time data display in table

--- a/StockInvestmentAnalytics/src/app/feature/investment-analytics/investment-analytics.component.html
+++ b/StockInvestmentAnalytics/src/app/feature/investment-analytics/investment-analytics.component.html
@@ -33,29 +33,22 @@
         </div>
     </div>
     <div class="col-sm-9">
+        <div class="row text-center">
+          <h5>{{tableData.name}}</h5>
+        </div>
         <table class="table table-striped">
             <thead>
               <tr>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Email</th>
+                <ng-container *ngFor="let col of tableData.column_names">
+                  <th>{{col}}</th>
+                </ng-container>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>John</td>
-                <td>Doe</td>
-                <td>john@example.com</td>
-              </tr>
-              <tr>
-                <td>Mary</td>
-                <td>Moe</td>
-                <td>mary@example.com</td>
-              </tr>
-              <tr>
-                <td>July</td>
-                <td>Dooley</td>
-                <td>july@example.com</td>
+              <tr *ngFor="let row of tableData.data">
+                <ng-container *ngFor='let i of row'>
+                  <td>{{i}}</td>
+                </ng-container>
               </tr>
             </tbody>
           </table>
