--- a/StockInvestmentAnalytics/src/app/feature/main-menu/main-menu.component.html
+++ b/StockInvestmentAnalytics/src/app/feature/main-menu/main-menu.component.html
@@ -2,24 +2,8 @@
   <div class="col-xs-12">
     <div class="row text-center content-display"><h4>DETAILS HERE</h4></div>
   </div>
-  <div class="col-xs-12">
-      <div class="row">
-          <nav class="navbar navbar-inverse">
-              <div class="container-fluid">
-                <div class="navbar-header">
-                  <a class="navbar-brand" href="#">WebSiteName</a>
-                </div>
-                <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Page 1</a></li>
-                  <li><a href="#">Page 2</a></li>
-                  <li><a href="#">Page 3</a></li>
-                </ul>
-              </div>
-            </nav>
-      </div>
-  </div>
-  <div>
-    <app-investment-analytics></app-investment-analytics>
+
+  <div *ngIf='stockData'>
+    <app-investment-analytics [tableData]="stockData.dataset" ></app-investment-analytics>
   </div>
 </div>
